RESOLVED FIXED191071
[PSON] WebView renders with incorrect dimensions after back or forward
https://bugs.webkit.org/show_bug.cgi?id=191071
Summary [PSON] WebView renders with incorrect dimensions after back or forward
Chris Dumez
Reported 2018-10-30 10:53:00 PDT
WebView renders with incorrect dimensions after back or forward with PSON enabled if the view has been resized.
Attachments
Patch (1.98 KB, patch)
2018-10-30 10:55 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-10-30 10:53:15 PDT
Chris Dumez
Comment 2 2018-10-30 10:55:09 PDT
WebKit Commit Bot
Comment 3 2018-10-30 19:27:20 PDT
Comment on attachment 353386 [details] Patch Clearing flags on attachment: 353386 Committed r237614: <https://trac.webkit.org/changeset/237614>
WebKit Commit Bot
Comment 4 2018-10-30 19:27:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.