[PSON] WebView renders with incorrect dimensions after back or forward https://bugs.webkit.org/show_bug.cgi?id=191071 <rdar://problem/45058950>

Reviewed by Alex Christensen.

Make sure WebPage::reinitializeWebPage() updates the page's dimensions if needed using the
WebPageCreationParameters it is provided.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::reinitializeWebPage):


Canonical link: https://commits.webkit.org/205899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237614 268f45cc-cd09-0410-ab3c-d52691b4dbfc